Context Override replaces instead of overrides #35691

Closed
opened 2013-06-09 15:16:08 +02:00 by Howard Trickey · 3 comments
Member

%%%It appears that the context override argument for bpy ops does not override but in fact replaces the current context.

I see some commented out lines in blenkernel/intern/context.c:ctx_data_get that would allow checking the original context if the python dictionary lookup fails. I tried uncommenting those and commenting the previous line, but then the program crashes somewhere else (which I guess is why they are commented out).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

The attached blend file has a script in the text editor that I would like to execute, but requires editmesh context in a 3d window. Even all of my attempts to supply the entire context I think is needed fails to work. If you can give me a workaround that would make this script work, that'd be good too. But seems that for the convenience of scriptwriters, making the context override really be an override and not a replacement would be ideal.

%%%

%%%It appears that the context override argument for bpy ops does not override but in fact replaces the current context. I see some commented out lines in blenkernel/intern/context.c:ctx_data_get that would allow checking the original context if the python dictionary lookup fails. I tried uncommenting those and commenting the previous line, but then the program crashes somewhere else (which I guess is why they are commented out). - Steps for others to reproduce the error (preferably based on attached .blend file) --- The attached blend file has a script in the text editor that I would like to execute, but requires editmesh context in a 3d window. Even all of my attempts to supply the entire context I think is needed fails to work. If you can give me a workaround that would make this script work, that'd be good too. But seems that for the convenience of scriptwriters, making the context override really be an override and not a replacement would be ideal. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%checked history and can't see why this was needed. fixed r57346.%%%

%%%checked history and can't see why this was needed. fixed r57346.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#35691
No description provided.