fix [#35691] Context Override replaces instead of overrides